# basic-pinn

./: 2dinput.py  burgers_equation_1d_mine.py  gradient_descent.py  logistic_equation_1d_newloss.py  logistic_try.py  lotka_voltera_equations_singlenet.py  mechgrid.py  pyproject.toml  questions.txt  wave_equation_1d.py
check_autograd/: autograd.py
diffusion_equation/: diff_eq_data_ext.npz  diffusion.py  exact.py
heat_equation/: heat1D.py  heat_1D.py  heat_eqn1D.py  heat_eqn1Dcopy.py
kuramoto_sivashinsky_eqn/: kuramoto_sivashincky.py
logistic_equation/: logistic_equation_1d.py  logistic_equation_1d_newloss.py
lokta_voltera/: lotka_voltera_equations.py  lotka_voltera_equations_singlenet.ipynb  lotka_voltera_equations_singlenet.py
periodically_forced_pendulum/: damped_pendulum.py  harmonic_oscillator.py  shm.py  shm1.py  shm_exact.py
wave_equation/: wave_eqn_working.py  wave_equation_1d.py  wave_equation_1d_newloss.py
